# unciv-rs

./: .cursorrules  .gitignore  Cargo.toml  ___-0068884.mm_profdata  ___-0071556.mm_profdata  ___-0145288.mm_profdata  ___-0160508.mm_profdata  ___-0177416.mm_profdata  ___-0183036.mm_profdata  ___-0187584.mm_profdata  build_script_build-0201020.mm_profdata  development_notes.md  prompts.md
main/: Cargo.toml
multiplayer/: Cargo.toml
multiplayer/src/: api_v2_wrapper.rs  api_version.rs  auth_credentials.rs  friend_list.rs  json_serializers.rs  lib.rs  multiplayer_files.rs  online_multiplayer_events.rs  server.rs  server_feature_set.rs  server_state.rs  timed_game_details.rs  unciv_network_exception.rs
multiplayer/src/endpoint_implementations/: mod.rs
multiplayer/src/storage/: api_v2_file_storage_emulator.rs  multiplayer_server.rs
python_port/: README.md  main.py  pyproject.toml
python_port/core/json/: __init__.py  duration_serializer.py  last_seen_improvement.py  unciv_json.py
python_port/core/logic/battle/: attackable_tile.py  battle.py  battle_constants.py  battle_damage.py  i_combatant.py  map_unit_combatant.py  nuke.py
rust_port/: Cargo.toml  README.md  port_log.md
rust_port/src/: backward_compatibility.rs  city_distance.rs  collection_extensions.rs  constants.rs  game_info.rs  gui.rs  id_checker.rs  lib.rs  log.rs  main.rs  map_parameters.rs  map_pathing.rs  mod_constants.rs  multi_filter.rs  music_track_controller.rs  platform_specific.rs  translations.rs  unciv_game.rs
rust_port/src/automation/: automation.rs  mod.rs
rust_port/src/automation/barbarian/: barbarian_automation.rs
rust_port/src/automation/city/: construction_automation.rs
rust_port/src/automation/civilization/: declare_war_plan_evaluator.rs  declare_war_target_automation.rs  diplomacy_automation.rs  mod.rs  motivation_to_attack_automation.rs  next_turn_automation.rs  religion_automation.rs  trade_automation.rs  use_gold_automation.rs
rust_port/src/automation/unit/: air_unit_automation.rs  battle_helper.rs  civilian_unit_automation.rs  espionage_automation.rs  head_towards_enemy_city_automation.rs  mod.rs  religious_unit_automation.rs  unit_automation.rs
rust_port/src/barbarians/: barbarian_manager.rs  barbarians.rs
rust_port/src/battle/: air_interception.rs  attackable_tile.rs  battle_damage.rs  battle_unit_capture.rs  city_combatant.rs  great_general_implementation.rs  map_unit_combatant.rs  nuke.rs  target_helper.rs
rust_port/src/city/: city.rs  city_focus.rs  city_stats.rs  great_person_points_breakdown.rs  mod.rs
rust_port/src/city/managers/: city_conquest_functions.rs  city_espionage_manager.rs  city_expansion_manager.rs  city_founder.rs
rust_port/src/civilization/: civilization.rs  mod.rs  notification_icons.rs
rust_port/src/civilization/diplomacy/: city_state_personality.rs  diplomacy_manager.rs  mod.rs
rust_port/src/diplomacy/: manager.rs  mod.rs
rust_port/src/github/: github_api.rs
rust_port/src/logic/: mod.rs
rust_port/src/logic/files/: map_saver.rs  (+2 more)
rust_port/src/map/: map_saver.rs  map_unit.rs  map_unit_cache.rs  mod.rs  unit_movement.rs
rust_port/src/mapunit/: unit_turn_manager.rs  unit_upgrade_manager.rs
rust_port/src/media/: media_finder.rs  mod.rs
rust_port/src/metadata/: game_settings.rs  mod.rs  player.rs
rust_port/src/models/: barbarian_manager.rs  civilization.rs  constants.rs  diplomacy.rs  game_info.rs  map_unit.rs  mod.rs  movement.rs  personality.rs  ruleset.rs  stats.rs  tile.rs  tile_map.rs
rust_port/src/multiplayer/: api_v2_wrapper.rs  friend_list.rs  mod.rs  multiplayer.rs  multiplayer_files.rs  request_structs.rs  response_structs.rs
rust_port/src/ruleset/: belief.rs  building.rs  construction.rs  event.rs  mod.rs  policy_branch.rs  ruin_reward.rs  ruleset.rs  ruleset_cache.rs  ruleset_object.rs  victory.rs
rust_port/src/server/: mod.rs  unciv_server.rs
rust_port/src/simulation/: simulation.rs  simulation_step.rs
rust_port/src/stats/: mod.rs  named_stats.rs
rust_port/src/tile/: mod.rs
rust_port/src/trade/: trade.rs  trade_evaluation.rs  trade_logic.rs  trade_offer.rs  trade_offer_type.rs
rust_port/src/ui/: base_screen.rs  images.rs  mod.rs
rust_port/src/unique/: unique.rs  unique_flag.rs  unique_trigger_activation.rs
rust_port/src/units/: base_unit.rs  mod.rs
rust_port/src/utils/: file_chooser.rs  gzip.rs  mod.rs
(+875 files in other folders)
