[workspace]
members = [ "ai", "combat", "city", "faction", "diplomacy", "espionage", "map", "mods", "multiplayer", "rules", "simulation", "trade", "ui", "units", "util", "encyclopedia", "graphics", "sound", "translation", "context"]

[package]
name = "unciv"
version = "0.1.0"
resolver = "3"
edition = "2024"

[[bin]]
name = "unciv"

[dependencies]
tracing = "^0.1"
tracing-subscriber = { version="^0.3", features=["env-filter","fmt"] }
