[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
battle = { path = "../battle"}
ai = { path = "../ai"}
automation = { path = "../automation"}
barbarians = { path = "../barbarians"}
city = { path = "../city"}
civilization = { path = "../civilization"}
core = { path = "../core"}
diplomacy = { path = "../diplomacy"}
espionage = { path = "../espionage"}
