[package]
name = "multiplayer"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tokio = { version = "1.32.0", features = ["full"] }
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
base64 = "0.22.1"
tracing-subscriber = { version="^0.3", features=["env-filter","fmt"] }
hyper = { version = "1.6.0", features = ["full"] }
axum = { version = "0.8.4", features = ["ws"] }
axum-extra = { version ="0.10.1", features=[] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4"] }
futures-util = "0.3.31"