[package]
name = "unciv-rust"
version = "0.1.0"
edition = "2021"
authors = ["Unciv Team"]
description = "A Rust port of the Unciv game"

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
lazy_static = "1.4.0"
log = "0.4.17"
env_logger = "0.9.0"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
nalgebra = { version = "0.32", features = ["serde-serialize"] }
serde_json = "1.0"
flate2 = "1.0"
base64 = "0.21"
uuid = { version = "1.4", features = ["v4"] }
sdl2 = "0.35"
macroquad = "0.4"
regex = "1.10"
walkdir = "2.4"
directories = "5.0"
path-clean = "1.0"

[build-dependencies]
cc = "1.0"
