[package]
name = "unciv-rust"
version = "0.1.0"
edition = "2021"
authors = ["Unciv Team"]
description = "A Rust port of the Unciv game"

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
lazy_static = "1.4.0"
log = "0.4.20"
env_logger = "0.10.1"
libc = "0.2"
serde = { version = "1.0.188", features = ["derive"] }
nalgebra = { version = "0.32", features = ["serde-serialize"] }
serde_json = "1.0"
flate2 = "1.0"
base64 = "0.21.5"
uuid = { version = "1.4", features = ["v4"] }
sdl2 = "0.35"
macroquad = "0.4"
regex = "1.10"
walkdir = "2.4"
directories = "5.0"
path-clean = "1.0"
ggez = "0.9.3"

# Server dependencies
actix-web = "4.4.0"
clap = { version = "4.4.6", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }

[build-dependencies]
cc = "1.0"
